tab width increased by 40px and title text overflow fixed

--- a/src/Editor.css
+++ b/src/Editor.css
@@ -19,7 +19,7 @@
 .editor .tab-bar div {
   padding: 10px;
   padding-right: 20px;
-  width: 100px;
+  width: 140px;
   overflow: hidden;
   text-overflow: ellipsis;
   background-color: rgb(157, 178, 216, 0.3);
@@ -28,6 +28,7 @@
   border-right: solid 1px #777;
   user-select: none;
   cursor: pointer;
+  text-wrap: nowrap;
 }
 .editor .tab-bar div img {
   width: 20px;
